--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NBA Prediction</title>
+    <link rel="stylesheet"  href="style.css"> 
 </head>
 <body>
-    <h1>Welcome to the home page</h1>
+    <h1>Welcome to the NBA Prediction </h1>
+    <p>Here you can find the latest predictions for NBA games.</p>
+    
+    <h2>Game Selection</h2>
+    <ul>
+        <li><a href="game1.html" class="rounded-button">Game 1</a></li>
+        <li><a href="game2.html" class="rounded-button">Game 2</a></li>
+        <li><a href="game3.html" class="rounded-button">Game 3</a></li>
+        <li><a href="game4.html" class="rounded-button">Game 4</a></li>
+    </ul>
 </body>
 </html>
