--- a/game4.html
+++ b/game4.html
@@ -9,6 +9,6 @@
     <!-- game content goes here -->
 
     <!-- Back button -->
-    <a href="index.html" class="rounded-button">Home</a>
+    <a href="index.html" class="home-button">Home</a>
 </body>
 </html>
