--- a/game1.html
+++ b/game1.html
@@ -9,6 +9,6 @@
     <!--  game content goes here -->
 
     <!--back button-->
-    <a href="index.html" class="rounded-button">Home</a>
+    <a href="index.html" class="home-button">Home</a>
 </body>
 </html>
